<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Monster Attack</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="mode_ready">Ready</string>
    <string name="mode_pause">Pause</string>
    <string name="mode_lose">Lose</string>
    <string name="mode_win">Win</string>
    <string name="score_text">0</string>
    <string name="menu_start">Start</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_resume">Resume</string>
    <string name="message_stopped">Stopped</string>
    <string name="you_wanna_loose_again">Do you really want \nto loose again?</string>
    <string name="prepare_the_solders">Major, attack!</string>
    <string name="major_yes_sir">Ye..s sir!</string>
    <string name="play">Yes(Play)</string>
    <string name="exit">No(Exit)</string>
    <string name="title">Monster Attack</string>
    <string name="credits1">Coded with </string>
    <string name="credits2">by 020363 </string>
    <string name="silent">Silent</string>
    <string name="difficulty">Difficulty</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you_obviously_lost">You (Obviously) lost</string>


</resources>
